2005-03-23 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gputils] Updated header files and linker scripts.

2005-03-11 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Fixed RELOCT_ALL relocation.

2005-01-27 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpal] Updated pub files.

2005-01-22 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Remove weak symbols from input object files.

2005-01-17 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gplink] Scan archives for missing symbols multiple times if necessary.

2005-01-17 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpasm] Fix relocation error with LCALL and LGOTO directives.

2005-01-14 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gpasm] Allow concatenation operators in extern and global directives.

2005-01-12 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Updated config scripts.

2005-01-06 Alain Portal <aportal AT univ-montp2 DOT fr>
  * Updated French man pages.

2005-01-03 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.13.0 Released.
  * [gpdasm] Fixed error in decoding two word instructions.

2004-12-31 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gputils] Added support for 18xx extended instruction set.
  * [gplink] Generate a warning if object processor names don't match.
  * [gpdasm] Decode 18xx instruction mnemonics.

2004-12-24 Craig Franklin <craigfranklin@users.sourceforge.net>
  * [gputils] Updated header files and linker scripts.
  * [gputils] Added new processors: p10f200, p10f202, p10f204, p10f206,
    p16f59, p16f639, p16f685, p16f687, p16f689, p16f690 p18f6310, p18f6390,
    p18f64j15, p18f65j10, p18f65j15, p18f6627, p18f66j10, p18f66j15,
    p18f6722, p18f67j10, p18f8310, p18f8390, p18f84j15, p18f85j10, p18f85j15,
    p18f8627, p18f86j10, p18f86j15, p18f8722, p18f87j10

2004-11-28 Robert Kaes <rjkaes@users.sourceforge.net>